# airflow-tm1

./: .pre-commit-config.yaml  .pypirc  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: tests.yaml
airflow_provider_tm1/hooks/: tm1.py
airflow_provider_tm1/operators/: tm1_run_chore.py  tm1_run_ti.py
airflow_tm1/hooks/: __init__.py  tm1.py  tm1_hook.py
airflow_tm1/operators/: tm1_processes.py  tm1_run_chore.py  tm1_run_ti.py
airflow_tm1/sensors/: tm1_element.py
dags/: tm1_to_s3.py
docs/: conf.py  index.rst  installation.rst  usage.rst
example_dags/: example_run_chore.py  example_run_ti.py  example_tm1_run_chore.py  example_tm1_run_ti.py  example_tm1_to_s3.py  example_value_sensor.py  tm1_to_s3.py
plugins/hooks/: tm1_hook.py
src/airflow_tm1/: __init__.py
src/airflow_tm1/hooks/: tm1.py
src/airflow_tm1/operators/: tm1_run_chore.py  tm1_run_ti.py
src/airflow_tm1/sensors/: tm1_cell_value.py  tm1_element.py
tests/: conftest.py
tests/hooks/: test_hook.py  test_tm1.py
tests/operators/: test_operators.py
