[build-system]
requires = ["flit_core>=3.2"]
build-backend = "flit_core.buildapi"

[project]
name = "airflow-tm1"
authors = [
  { name="Alexander Sutcliffe", email="sutcliffe.alex@gmail.com" },
]
dependencies = [
  'tm1py ~= 1.1',
  'apache-airflow ~= 2.1'
]
dynamic = ["version", "description"]
readme = "README.md"


[project.optional-dependencies]
tests = [
  'pytest',
]



[tool.black]
line-length = 120
target-version = ["py39"]
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.mypy_cache
    | _build
    | buck-out
    | build
    | dist
  )
)
'''

[tool.isort]
profile = "black"
