[metadata]
name = airflow-provider-hightouch
version = attr: airflow_provider_hightouch.__version__
description = Hightouch Provider for Airflow
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache License 2.0
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Operating System :: OS Independent
author = Hightouch
author_email = pedram@hightouch.io
url = https://github.com/hightouchio/airflow-provider-hightouch
project_urls =
    Bug Tracker = https://github.com/hightouchio/airflow-provider-hightouch/issues
cmdclass=
    verify=version:validate_version

[options]
packages = find:
python_requires = >=3.7
install_requires =
    requests
    apache-airflow >= 2.2
tests_requires =
    pytest
    requests_mock

[options.entry_points]
apache_airflow_provider=
    provider_info=airflow_provider_tm1:get_provider_info
